--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h4>Computer Engineering Student at Sharif University of Technology</h4>
         <hr/>
         <footer>
-            <li><small><a href="./pages/contact_me.html">Contant Me</a></small><li/>
+            <li><small><a href="./pages/contact_me.html">Contact Me</a></small><li/>
             <small>Copyright © 2025 arefee.com All Rights Reserved. :D</small>
         </footer>
 
