--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
         <!-- title -->
         <title>Vahid Arefee</title>
 
-        <!-- base -->
-        <!-- <base href="https://www.arefee.com" target="_blank"> -->
-
         <!-- meta -->
         <meta charset="UTF-8">
         <meta name="description" content="Vahid Arefee, CE Student, Personal Website">
@@ -32,15 +29,13 @@
 
     <!-- body -->
     <body>
-        <h1>Hello Mellat!</h1>
+        <h1>Bonjour!</h1>
         <hr/>
-        <img src="images/395*545.jpg" alt="Vahid Arefee's Personal Picture" height="200">
         <h3>Vahid Arefee</h3>
-        <h4>Computer Engineering Student at Sharif University of Technology</h4>
         <hr/>
         <footer>
-            <li><small><a href="./pages/contact_me.html">Contact Me</a></small><li/>
-            <small>Copyright © 2025 arefee.com All Rights Reserved. :D</small>
+          <!--  <li><small><a href="./pages/contact_me.html">Contact Me</a></small><li/> -->
+            <small>Copyright © 2025 arefee.com All Rights Reserved.</small>
         </footer>
 
         
