Add C and Java to skill list

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                     <li>Word</li>
                     <li>Excel</li>
                     <li>PowerPoint</li>
+                    <li>C</li>
+                    <li>Java<li>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JavaScript</li>
