Fix typos in education and contact sections

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h3>| Education</h3>
                 <div class="detail_box">
                     <p><b>Sharif University of Technology</b></p>
-                    <p>Computer Engineering BS (1403 - Present)</p>
+                    <p>Computer Engineering, BS (1403 - Present)</p>
                 </div>
             </div>
 
@@ -56,7 +56,7 @@
                     <li>Excel</li>
                     <li>PowerPoint</li>
                     <li>C</li>
-                    <li>Java<li>
+                    <li>Java</li>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JavaScript</li>
@@ -85,7 +85,7 @@
             <div class="other_box">
                 <h3>| Contact Me</h3>
                 <p>Email: jesuisvahid@gmail.com</p>
-                <p><a href="https://www.github.com/iamvahid" target="_blank">Github: github.com/student</a></p>
+                <p><a href="https://www.github.com/iamvahid" target="_blank">Github</a></p>
             </div>
             
         <script src="scripts.js"></script>
