--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h1>Vahid Arefee</h1>
                 <h3>Computer Engineering Student</h4>
                 <h6>Sharif University of Technology</h5>
-                <h6>Interested in<br>Mathematics<br>Physics<br>Electronics<br>Software Development<br>UI/UX Design</h6>
+                <h6>Interested in<br>Mathematics<br>Physics<br>Electronics<br>Software Development</h6>
                 <button class="change_theme_button" onclick="toggleTheme()">Theme Color</button>
             </div>
 
